// Code generated by sheeter. DO NOT EDIT.
// Sheeter: https://github.com/yinweli/Sheeter

syntax = "proto3";
package sheeterProto;

option go_package = ".;sheeterProto";

message Item {
  optional int32 Count = 1; // 物品數量
  optional int32 ItemID = 2; // 物品編號
}
