// Code generated by sheeter. DO NOT EDIT.
// Sheeter: https://github.com/yinweli/Sheeter

syntax = "proto3";
package sheeterProto;
option go_package = ".;sheeterProto";
import 'item.proto';

message Reward {
  repeated Item Item = 1; // 
  optional int64 Atium = 2; // 天金
  optional int64 Crystal = 3; // 魔晶
  optional int64 Diamond = 4; // 鑽石
  optional int64 FelIron = 5; // 精鐵
  optional int64 Gold = 6; // 金幣
}
