syntax = "proto3";
package test;
option go_package = ".;test";

import 'test2.proto';

message Test1 {
  optional int64 Value = 1;
  optional Test2 Data = 2;
}

message TestX {
  map<string, Test1> Datas = 1;
}