syntax = "proto3";
package test;
option go_package = ".;test";

message Test2 {
  optional int64 Value = 1;
}